Missing gap between label and dropdowns (macos) Fixes #4572

--- a/webviews/createPullRequestView/index.css
+++ b/webviews/createPullRequestView/index.css
@@ -75,7 +75,7 @@ body {
 
 .input-label.combo-box {
 	margin-right: 2px;
-	min-width: 43px;
+	min-width: 48px;
 }
 
 .selector-group {
